Publish built docs triggered by 60d5342831ea3c20c4a3f166743af833421c169c